--- a/mobile/src/main/res/layout/fragment_list.xml
+++ b/mobile/src/main/res/layout/fragment_list.xml
@@ -49,13 +49,12 @@
         android:layout_below="@id/playback_error">
     </ListView>
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/download_fab"
+        android:id="@+id/home_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|start"
         android:layout_margin="16dp"
-        android:src="@android:drawable/stat_sys_download"
-        android:visibility="invisible"
+        android:src="@drawable/home_white"
         app:layout_anchorGravity="bottom|left" />
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_categorh_fab"
