--- a/mobile/src/main/res/layout/include_toolbar.xml
+++ b/mobile/src/main/res/layout/include_toolbar.xml
@@ -22,12 +22,30 @@
     android:layout_width="match_parent"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_height="match_parent"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:layout_scrollFlags="scroll|enterAlways"/>
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
+        <ImageButton
+            android:id="@+id/home_button"
+            android:layout_width="24dip"
+            android:layout_height="24dip"
+            android:layout_marginEnd="@dimen/media_item_icon_margin_start"
+            android:layout_marginStart="@dimen/media_item_icon_margin_start"
+            android:background="?attr/selectableItemBackground"
+            android:contentDescription="@string/favorite"
+            android:scaleType="centerInside"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:src="@drawable/home" />
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+    </LinearLayout>
 </android.support.design.widget.AppBarLayout>
